# TheDieIsCast

./: CMakeLists.txt  EncodingConverter.py  LICENSE  README.md
Include/: Animation.h  Bar.h  Config.h  Debug.h  Drawbar.h  Enemy.h  ErrorWindow.h  File.h  Game.h  Helmet.h  Interface.h  Laser.h  LaserGun.h  MapCollision.h  MapNote.h  MessageQueueSubscriber.h  MovableWall.h  NPC.h  Object.h  ObjectManagement.h  Page.h  Player.h  PressurePlate.h  Receptor.h  ResourceManagement.h  Robot.h  RobotFactory.h  Scene.h  Script.h  Shadow.h  ShadowGenerator.h  Spark.h  Text.h  TileMap.h  TimeManagement.h  tinyxml2.h
Resources/: Drawbar.pxo  Info.plist
Resources/Icon/: icon.icns
Resources/Images/: Drawbar.pxo  Factory.pxo  Heroine.pxo  PlayerFail.pxo  PlayerWalk.pxo  PlayerWalk2.pxo  RobotDie.pxo  SparkTube.pxo  Villain.pxo  Wall.pxo
Resources/Maps/: DefaultMapSet.pxo  DefaultMapSet.tsx  ExtendedMapSet.pxo  ExtendedMapSet.tsx  black.tmx  dream2-world2.tmx  dream2.json  dream2.tmx  dream2_TE.json  dream2_TE.tmx  map1.json  map1.tmx  map2.tmx  map3.tmx  map4.tmx  post_dream2.tmx  pre_world3.tmx  ship.tsx  template.tmx  test1.tmx  test2.tmx  test3.tmx  world1.json  world1.tmx  world10.tmx  world2-2.json  world2-2.tmx  world2.tmx  world3.json  world3.tmx  world4.json  world4.tmx  world5.json  world5.tmx  world6-world2.tmx  world6.json  world6.tmx  world7-world6.json  world7-world6.tmx  world7.json  (+8 more)
Resources/Shader/: noise.frag  rewinding.frag  shader.frag  shining.frag
Script/: Act_1.json  Act_10_True_Ending_2.json  Act_2.json  Act_3.json  Act_3_Normal_Ending_1.json  Act_4.json  Act_6_Bad_Ending.json  Act_7_Normal_Ending_2.json  Act_8.json  Act_9_True_Ending_1.json  ScriptTree.json  test.json  testScriptTree.json
Source/: Animation.cpp  Bar.cpp  Debug.cpp  Drawbar.cpp  Enemy.cpp  ErrorWindow.cpp  File.cpp  Game.cpp  Helmet.cpp  Interface.cpp  Laser.cpp  LaserGun.cpp  MapCollision.cpp  MapNote.cpp  MessageQueueSubscriber.cpp  MovableWall.cpp  NPC.cpp  Object.cpp  ObjectManagement.cpp  Page.cpp  Player.cpp  PressurePlate.cpp  Receptor.cpp  ResourceManagement.cpp  Robot.cpp  RobotFactory.cpp  Scene.cpp  Script.cpp  Shadow.cpp  ShadowGenerator.cpp  Spark.cpp  Text.cpp  TileMap.cpp  TimeManagement.cpp  main.cpp
